Worked on creating a complete test suit for the basic functionality added in support of the microprofile 3.0 configuration interface.